assets/queries/terraform/aws/unrestricted_security_group_ingress/test/positive12.tf
resource "aws_vpc_security_group_ingress_rule" "positive12" {
  security_group_id = aws_security_group.default.id
  from_port         = 3306
  to_port           = 3306
  ip_protocol       = "tcp"
  cidr_ipv6         = "::/0"
  description       = "Allow MySQL from anywhere over IPv6"
}

resource "aws_vpc_security_group_ingress_rule" "positive12_full_ipv6" {
  security_group_id = aws_security_group.default.id
  from_port         = 3306
  to_port           = 3306
  ip_protocol       = "tcp"
  cidr_ipv6         = "0000:0000:0000:0000:0000:0000:0000:0000/0"
  description       = "Allow MySQL from anywhere over IPv6"
}
